--- a/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/Nuevo.cshtml
@@ -77,7 +77,8 @@
     var selectedIDs;
     function OnBeginCallback(s, e) {
             //Pass all selected keys to GridView callback action
-            e.customArgs["selectedIDs"] = selectedIDs;
+        e.customArgs["selectedIDs"] = selectedIDs;
+        e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val();
         }
     function OnSelectionChanged(s, e) {
         s.GetSelectedFieldValues("IdCbteCble_Ogiro", GetSelectedFieldValuesCallback);
@@ -97,7 +98,8 @@
     function AddFacturas() {
 
         var datos = {
-            IDs: selectedIDs
+            IDs: selectedIDs,
+            IdTransaccionFixed: $("#IdTransaccionSession").val()
         }
         $.ajax({
             type: 'POST',
@@ -192,7 +194,8 @@
     function GetIngresos() {
         var datos = {
             FechaFin: $("#Fecha_fin").val(),
-            IdCaja: $("#IdCaja").val()
+            IdCaja: $("#IdCaja").val(),
+            IdTransaccionFixed: $("#IdTransaccionSession").val()
         }
         $.ajax({
             type: 'POST',
@@ -214,7 +217,8 @@
 
     function Calcular() {
         var datos = {
-            SaldoContableAnterior: $("#Saldo_cont_al_periodo").val()
+            SaldoContableAnterior: $("#Saldo_cont_al_periodo").val(),
+            IdTransaccionFixed: $("#IdTransaccionSession").val()
         }
         $.ajax({
             type: 'POST',
@@ -244,7 +248,8 @@
 
     function armar_diario() {
         var datos = {
-            IdCtaCble: $("#IdCtaCble").val()
+            IdCtaCble: $("#IdCtaCble").val(),
+            IdTransaccionFixed: $("#IdTransaccionSession").val()
         }
         $.ajax({
             type: 'POST',
@@ -277,6 +282,7 @@
         </div>
 
     }
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     @Html.HiddenFor(q => q.Saldo_cont_al_periodo, new { @id = "Saldo_cont_al_periodo" })
     @Html.HiddenFor(q => q.Ingresos, new { @id = "Ingresos" })
     @Html.HiddenFor(q => q.Total_Ing, new { @id = "Total_Ing" })
