--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/Nuevo.cshtml
@@ -10,6 +10,7 @@
 
 @using (Html.BeginForm("Nuevo", "EgresoInventario", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     @Html.HiddenFor(q => q.IdEmpresa)
     @Html.HiddenFor(q => q.signo)
     @Html.HiddenFor(q => q.IdMovi_inven_tipo)
