--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/Modificar.cshtml
@@ -9,7 +9,9 @@
 }
 
 @using (Html.BeginForm("Modificar", "EgresoInventario", FormMethod.Post, new { @class = "form", @role = "form" }))
-{ @Html.HiddenFor(q => q.IdEmpresa)
+{
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+    @Html.HiddenFor(q => q.IdEmpresa)
     @Html.HiddenFor(q => q.IdSucursal)
     @Html.HiddenFor(q => q.IdBodega)
     @Html.HiddenFor(q => q.IdNumMovi)
