--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/Modificar.cshtml
@@ -64,11 +64,12 @@
         $("#FacturasModal").modal("show");
     }
 
-    function AddFacturas() {
+      function AddFacturas() {
 
         var datos = {
             IDs: selectedIDs,
-            TotalACobrar: $("#cr_TotalCobro").val()
+            TotalACobrar: $("#cr_TotalCobro").val(),
+            IdTransaccionSession: $("#IdTransaccionSession").val()
         }
         $.ajax({
             type: 'POST',
@@ -95,7 +96,8 @@
     function CalcularSaldo() {
 
         var datos = {
-            TotalACobrar: $("#cr_TotalCobro").val()
+            TotalACobrar: $("#cr_TotalCobro").val(),
+            IdTransaccionSession: $("#IdTransaccionSession").val()
         }
         $.ajax({
             type: 'POST',
@@ -117,6 +119,7 @@
     function VaciarLista() {
 
         var datos = {
+            IdTransaccionSession: $("#IdTransaccionSession").val()
         }
         $.ajax({
             type: 'POST',
@@ -140,6 +143,7 @@
 
 @using (Html.BeginForm("Modificar", "Cobranza", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     if (@ViewBag.mensaje != null)
     {
         <div class="alert alert-warning alert-dismissible">
@@ -198,7 +202,7 @@
                         @Html.ValidationMessageFor(q => q.IdCobro_tipo, "", new { @class = "text-danger" })
                     </div>
                 </div>
-            }            
+            }
         </div>
         <div class="col-md-4">
             <div class="col-md-offset-6 col-md-6">
