--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/CobranzaRetenciones/AplicarRetencion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/CobranzaRetenciones/AplicarRetencion.cshtml
@@ -54,6 +54,7 @@
 
 @using (Html.BeginForm("AplicarRetencion", "CobranzaRetenciones", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     @Html.HiddenFor(q => q.IdEmpresa)
     @Html.HiddenFor(q => q.IdSucursal)
     @Html.HiddenFor(q => q.IdCobro)
@@ -105,7 +106,7 @@
             <div class="col-md-2">
                 <div class="form-group">
                     <label for="vt_Subtotal">Subtotal</label>
-                    @Html.TextBoxFor(q => q.vt_Subtotal,  new { @class = "form-control", @id = "vt_Subtotal", @readonly = "readonly" })
+                    @Html.TextBoxFor(q => q.vt_Subtotal, new { @class = "form-control", @id = "vt_Subtotal", @readonly = "readonly" })
                 </div>
             </div>
             <div class="col-md-2">
@@ -117,7 +118,7 @@
             <div class="col-md-2">
                 <div class="form-group">
                     <label for="vt_Total">Total</label>
-                    @Html.TextBoxFor(q => q.vt_Total,  new { @class = "form-control", @id = "vt_Total", @readonly = "readonly" })
+                    @Html.TextBoxFor(q => q.vt_Total, new { @class = "form-control", @id = "vt_Total", @readonly = "readonly" })
                 </div>
             </div>
         </div>
