--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/AsignacionDeGastos/_GridViewPartial_gastos_por_asignar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/AsignacionDeGastos/_GridViewPartial_gastos_por_asignar.cshtml
@@ -5,7 +5,7 @@
         settings.Name = "GridViewPartial_gastos_por_asignar";
         settings.CallbackRouteValues = new { Controller = "LiquidacionImportacion", Action = "_GridViewPartial_gastos_por_asignar" };
         settings.Width = Unit.Percentage(100);
-        settings.KeyFieldName = "IdCbteCble";
+        settings.KeyFieldName = "secuencia";
 
         //Configuracion cabecera
         settings.Settings.ShowTitlePanel = true;
