--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/DistribucionPorLote/_GridViewPartial_por_distribuir.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/DistribucionPorLote/_GridViewPartial_por_distribuir.cshtml
@@ -99,7 +99,7 @@
                     </div>
                     <div class="col-md-2">
                         <div class="form-group">
-                            <label for="fecha_fab">Fecha fabricación*</label>
+                            <label for="fecha_fab">Fecha fabricación</label>
                             <input id="fecha_fab" type="date" class="form-control">
 
                         </div>
