--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Nuevo.cshtml
@@ -804,6 +804,10 @@
                     } else {
                         $("#link_lote").hide();
                     }
+
+                    $("#Aparece_modu_Ventas").attr("checked", data.Aparece_modu_Ventas);
+                    $("#Aparece_modu_Compras").attr("checked", data.Aparece_modu_Compras);
+                    $("#Aparece_modu_Inventario").attr("checked", data.Aparece_modu_Inventario);
                 }
             },
             error: function (error) {
@@ -817,12 +821,23 @@
         if (ID > 0) {
             $("#link_imagen").hide();
             $("#link_general").click();
+           
         } else {
             $("#link_imagen").show();
             $("#link_general").click();
         }
     }
-
+    
+    function set_camp_modulo() {
+        var ID = IdProducto_padre.GetValue();
+        if (ID > 0) {
+            $("#Aparece_modu_Ventas").attr("checked", false);
+            $("#Aparece_modu_Compras").attr("checked", false);
+            $("#Aparece_modu_Inventario").attr("checked", false);
+        } else {
+            get_info_producto_tipo();
+        }
+    }
     function get_info_padre() {
         var IPadre = IdProducto_padre.GetValue();
         if (IPadre != "") {
