--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/AsignacionDeGastos/_GridViewPartial_gastos_asignados.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/AsignacionDeGastos/_GridViewPartial_gastos_asignados.cshtml
@@ -58,9 +58,9 @@
             column.Width = Unit.Percentage(20);
             column.EditorProperties().ComboBox(p =>
             {
-                p.Columns.Add("ct_descripcion", "Gatos").Width = Unit.Percentage(100);
-                p.TextField = "ct_descripcion";
-                p.ValueField = "IdCatalogo_tipo";
+                p.Columns.Add("gt_descripcion", "Gatos").Width = Unit.Percentage(100);
+                p.TextField = "gt_descripcion";
+                p.ValueField = "IdGasto_tipo";
                 p.ValueType = typeof(int);
                 p.DataSource = ViewBag.lst_gastos;
             });
